[gd_scene load_steps=19 format=2]

[ext_resource path="res://visual_cue.gd" type="Script" id=1]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_00.png" type="Texture" id=2]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_01.png" type="Texture" id=3]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_02.png" type="Texture" id=4]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_03.png" type="Texture" id=5]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_04.png" type="Texture" id=6]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_05.png" type="Texture" id=7]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_06.png" type="Texture" id=8]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_07.png" type="Texture" id=9]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_08.png" type="Texture" id=10]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_09.png" type="Texture" id=11]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_10.png" type="Texture" id=12]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_11.png" type="Texture" id=13]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_12.png" type="Texture" id=14]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_13.png" type="Texture" id=15]
[ext_resource path="res://external/aseprite/visual_cue/visual_cue_14.png" type="Texture" id=16]
[ext_resource path="res://ding.tscn" type="PackedScene" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="visual_cue" type="Node2D"]
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )

[node name="audio_stream_player_2d" parent="." instance=ExtResource( 17 )]

[node name="death_timer" type="Timer" parent="."]
one_shot = true

[node name="tween" type="Tween" parent="."]

